# field-agent

./: .gitignore  CLAUDE.md  README.md  install.sh  pyproject.toml
.github/workflows/: ci.yml
docs/: CODE_REVIEW.md
field_agent/: __init__.py  __main__.py  auth.py  config.py
field_agent/cli/: __init__.py  main.py  setup.py  tunnel.py
field_agent/models/: auth.py  session.py
field_agent/providers/: __init__.py  base.py  local.py
field_agent/server/: app.py  dependencies.py  websocket.py
field_agent/server/routes/: auth.py  health.py  sessions.py
field_agent/services/: terminal_bridge.py
field_agent/tunnels/: __init__.py  base.py  cloudflare.py
static/: index.html
static/css/: style.css
static/js/: app.js  auth.js  terminal.js
termweave/: __init__.py  __main__.py  auth.py  config.py
termweave/cli/: main.py
termweave/providers/: base.py  local.py
termweave/server/: app.py  dependencies.py  websocket.py
termweave/server/routes/: auth.py  health.py  sessions.py
termweave/services/: terminal_bridge.py  tmux.py
tests/: __init__.py  conftest.py
tests/e2e/: test_full_flow.py
tests/integration/: test_api.py  test_frontend_flow.py  test_websocket.py
tests/unit/: test_auth.py  test_config.py  test_setup.py
